# advent-of-code

./: .gitignore  README.org
bqn/: shell.nix
bqn/2024/: day01.bqn
commonlisp/: shell.nix
commonlisp/2024/: day2.lisp  day4.lisp  utils.lisp
dyalog/: 2024.txt
elisp/: flake.nix  shell.nix
elisp/2024/: day1.el  day1.lisp  day2.el  day3.el  day3.lisp  utils.el  utils.lisp
haskell/2024/: Day1.hs  Day2.hs
k/: 2024.k  flake.nix  shell.nix
rust/2022/default-file/: Cargo.toml
rust/2022/dia-01/: Cargo.toml
rust/2022/dia-04/: Cargo.toml
rust/2022/dia-06/: Cargo.toml
rust/2022/dia-07/: Cargo.toml
rust/2022/dia-12/: Cargo.toml
rust/2023/: Cargo.toml  README.md
rust/2023/day_01/: Cargo.toml
rust/2023/day_02/: Cargo.toml
rust/2023/day_03/: Cargo.toml
rust/2023/day_04/: Cargo.toml
rust/2023/day_05/: Cargo.toml
rust/2023/day_06/: Cargo.toml
rust/2023/day_07/: Cargo.toml
rust/2023/day_08/: Cargo.toml
rust/2023/day_09/: Cargo.toml
rust/2023/day_10/: Cargo.toml
rust/2023/get_aoc_input/: Cargo.toml
rust/2023/get_aoc_input/src/: lib.rs
uiua/: flake.nix  shell.nix
uiua/2023/day0/: main.ua
uiua/2023/day1/: main.ua
uiua/2023/day2/: main.ua
uiua/2024/day00/: main.ua
uiua/2024/day01/: main.ua
uiua/2024/day05/: main.ua
uiua/2024/day10/: main.ua
uiua/2024/day11/: main.ua
uiua/2024/day12/: main.ua
uiua/2024/day13/: main.ua
uiua/2024/day14/: main.ua
uiua/2024/day2/: main.ua
uiua/2024/day3/: main.ua
uiua/2024/day4/: main.ua
uiua/2024/day5/: main.ua
uiua/2024/day6/: main.ua
uiua/2024/day7/: main.ua
(+28 files in other folders)
