[package]
name = "get_aoc_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["cookies", "blocking"]}
tokio = {version = "1.23.0", features = ["full"] }
http = "0.2.8"
